fixed text alignment and size

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
 
   .container-left-text{
   margin-left: 1150px;
-  text-align: right;
+  text-align: rightgit s;
   /* border: 1px solid red; */
 }
 
